trying to get add button working

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,13 @@
 body {
-  background-image: url('../images/Moraine_Lake_17092005.jpg');
+  // background-image: url('../images/Moraine_Lake_17092005.jpg');
   font-family: 'Roboto', sans-serif;
+}
+
+img{
+  width: 300px;
+  height: 300px;
+}
+
+.landscape-cards {
+  margin-bottom: 30px;
 }
