--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,6 +24,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/logout">Logout</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/new">Add a new landscape</a>
+            </li>
         <% } else { %>
           <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
