--- a/views/landscapes/index.ejs
+++ b/views/landscapes/index.ejs
@@ -4,13 +4,13 @@
 <% landscapes.forEach((landscape)=> { %>
 
 
-    <div class="col-md-6 col-lg-4">
+    <div class="col-md-6 col-lg-4 card-style">
       <div class="card landscape-cards">
         <img class="card-img-top" src="<%= landscape.image%>" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title"><%= landscape.name %><br><%= landscape.location%></h4>
           <div class="dropdown-menu">
-          <p class="card-text"><%= landscape.description%></p>
+          <p class="card-text dropdown-item"><%= landscape.description%></p>
           </div>
           <a href="/landscapes/<%= landscape.id %>" class="btn btn-primary">See this landscape</a>
         </div>
