--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,9 @@ body {
   // background-image: url('../images/Moraine_Lake_17092005.jpg');
   font-family: 'Roboto', sans-serif;
 }
-
+.card-style{
+  heigth: 500px;
+}
 img{
   width: 300px;
   height: 300px;
@@ -13,4 +15,24 @@ img{
 }
 .text-center {
   margin: auto;
+}
+// .showWidth {
+//   width: 700px;
+//   height: 500px;
+// }
+
+.heigthCard {
+
+}
+
+.widthButton{
+  width: 318px;
+
+  margin: auto;
+  .btn{
+    width: 318px;
+    text-align: center;
+    margin: auto;
+    margin-top: 2px;
+  }
 }
