--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">LANDSCAPES OF NORWAY</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -33,6 +33,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="/register">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="/index">Back</a>
           </li>
         <% } %>
       </ul>
